--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.1 - Execution Environment — Ports & Boundaries/00.0.1 - Execution Environment — Ports & Boundaries (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.1 - Execution Environment — Ports & Boundaries/00.0.1 - Execution Environment — Ports & Boundaries (index).md
@@ -29,10 +29,10 @@ These elements work together to enable safe and controlled interaction between s
 
 | Category | Description | Key Elements |
 |----------|-------------|--------------|
-| Core Operations | Primary interface functions | Ingress Control, Egress Shaping, Surface Management, State Retention |
-| Stability Conditions | Required invariants | Safe Flow, Coherence, Protection, Recovery |
-| Modulator Effects | Control parameters | λV (primary), ∇S (boundary), ψA (coherence) |
-| Interface Types | Boundary categories | Ports (flow), Gates (threshold), Surfaces (exposure) |
+| Interface Axioms | Foundational truths | [[00.0.1.0 - Interface Axioms (index)]], [[I1 — Selective Permeability (axiom)]], [[I2 — Boundary Integrity (axiom)]], [[I3 — Flow Conservation (axiom)]] |
+| Interface Control | Control parameters | [[00.0.1.1 - Interface Control — Thresholds & Flow Rates (index)]], λV (primary), ∇S (boundary), ψA (coherence) |
+| Interface Primitives | Core operations | [[00.0.1.2 - Interface Primitives (index)]], [[Port]], [[Gate]], [[Surface]], [[Buffer]] |
+| Operational Flow | Interface sequence | Port (receive) → Gate (evaluate) → Buffer (retain) → Surface (expose) |
 
 Each component provides:
 - Technical and humane mappings
@@ -44,11 +44,16 @@ Each component provides:
 
 ## Core References
 
-Primitives:
-- [[Delta]]
-- [[RelationalEmbedding]]
-- [[Stabilization (Closure)]]
-- [[Form]]
+Interface Axioms:
+- [[I1 — Selective Permeability (axiom)]]
+- [[I2 — Boundary Integrity (axiom)]]
+- [[I3 — Flow Conservation (axiom)]]
+
+Interface Primitives:
+- [[Port]]
+- [[Gate]]
+- [[Surface]]
+- [[Buffer]]
 
 Modulators:
 - [[λV — Void Resonance Threshold (Volozhina)]] (primary)
@@ -127,6 +132,57 @@ Related Modules:
    - λV for thresholds
    - ∇S for boundaries
    - ψA for coherence
+
+---
+
+## λV Modulation Examples
+
+The Void Resonance Threshold (λV) controls interface receptivity and protection:
+
+### Port Control
+- **High λV:** Port becomes highly selective, only allowing closely matched flows
+  - Technical: Strict validation, low acceptance rate
+  - Humane: Cautious openness, selective trust
+- **Low λV:** Port becomes more permeable, accepting broader range of inputs
+  - Technical: Relaxed validation, higher throughput
+  - Humane: Open receptivity, welcoming stance
+
+### Gate Thresholds
+- **λV modulation** adjusts trigger sensitivity:
+  - `λV↑`: Higher activation threshold (more stability, less responsiveness)
+  - `λV↓`: Lower activation threshold (more responsiveness, less stability)
+
+### Surface Exposure
+- **λV calibration** controls boundary transparency:
+  - Technical: ACL strictness, firewall rules
+  - Humane: Privacy levels, intimacy boundaries
+
+### State Buffer Management
+- **λV influence** on memory retention:
+  - High λV: Selective retention, quality focus
+  - Low λV: Broad retention, quantity focus
+
+---
+
+## Crosswalk Tables
+
+### Interface Types
+
+| Technical Term | Humane Term | Ontological Function | λV Effect |
+|---------------|-------------|---------------------|-----------|
+| Port | Gateway | Flow control | Selectivity tuning |
+| Gate | Threshold | Activation control | Sensitivity adjustment |
+| Surface | Boundary | Exposure control | Transparency tuning |
+| Buffer | Memory | State retention | Retention selectivity |
+
+### Flow States
+
+| Technical State | Humane State | Stability Condition | Recovery Action |
+|----------------|-------------|-------------------|----------------|
+| Overload | Overwhelmed | Rate exceeded | Backpressure |
+| Underflow | Starved | Input insufficient | Request more |
+| Corruption | Confused | State inconsistent | Reset/restore |
+| Blocked | Closed | Interface sealed | Clear obstruction |
 
 ---
 
