--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -1,42 +1,42 @@
 ### Geometric characterization
 
-Consider spacetime $M=\mathbb{R}\times\mathbb{R}^3$ with coordinates $(t,\mathbf{x})$ and Euclidean spatial metric. An emission event at $(t_0,\mathbf{x}_0)$ generates a radially symmetric, measure-valued field supported on the future spherical wavefront
+Consider spacetime $M=\mathbb{R}\times\mathbb{R}^3$ with coordinates $(t,\mathbf{s})$ and Euclidean spatial metric. An emission event at $(t_0,\mathbf{s}_0)$ generates a radially symmetric, measure-valued field supported on the future spherical wavefront
 $$
-\mathcal{C}=\{(t,\mathbf{x}) : t\ge t_0,\; r = v\,(t-t_0)\},\quad r=\|\mathbf{x}-\mathbf{x}_0\|,
+\mathcal{C}=\{(t,\mathbf{s}) : t\ge t_0,\; r = v\,(t-t_0)\},\quad r=\|\mathbf{s}-\mathbf{s}_0\|,
 $$
-where $v$ is the constant field speed. At each fixed time $t>t_0$, the field is a surface delta measure on the sphere $S_{r}$ of radius $r=v(t-t_0)$ centered at $\mathbf{x}_0$, normalized so its total mass is $q$.
+where $v$ is the constant field speed. At the emission time $t=t_0$, the field is a spatial Dirac delta of magnitude $q$ located at $\mathbf{s}_0$. At each fixed time $t>t_0$, the field is a surface delta measure on the sphere $S_{r}$ of radius $r=v(t-t_0)$ centered at $\mathbf{s}_0$, normalized so its total mass is $q$.
 
 ---
 
 ### Analytic form
 
-Let $\tau=t-t_0$ and $r=\|\mathbf{x}-\mathbf{x}_0\|$. The measure-valued density (per unit volume) is
+Let $\tau=t-t_0$ and $r=\|\mathbf{s}-\mathbf{s}_0\|$. The measure-valued density (per unit volume) is
 $$
-\rho(t,\mathbf{x})
+\rho(t,\mathbf{s})
 =\frac{q}{4\pi r^2}\,\delta\!\big(r - v\,\tau\big)\,H(\tau),
 $$
-where $H$ is the Heaviside step function. Equivalently, using the surface delta $\delta_{S_r}$ (a distribution supported on the sphere $S_r$ with $\int_{\mathbb{R}^3}\delta_{S_r}\,\mathrm{d}^3x=4\pi r^2$),
+where $H$ is the Heaviside step function. Equivalently, using the surface delta $\delta_{S_r}$ (a distribution supported on the sphere $S_r$ with $\int_{\mathbb{R}^3}\delta_{S_r}\,\mathrm{d}^3s=4\pi r^2$),
 $$
-\rho(t,\mathbf{x})=\frac{q}{4\pi r^2}\,\delta_{S_{v\tau}}(\mathbf{x}-\mathbf{x}_0)\,H(\tau).
+\rho(t,\mathbf{s})=\frac{q}{4\pi r^2}\,\delta_{S_{v\tau}}(\mathbf{s}-\mathbf{s}_0)\,H(\tau).
 $$
 - **Support:** $r=v\tau$ and $\tau\ge 0$.
-- **Conservation:** $\displaystyle \int_{\mathbb{R}^3}\rho(t,\mathbf{x})\,\mathrm{d}^3x = q$ for all $t>t_0$.
+- **Conservation:** $\displaystyle \int_{\mathbb{R}^3}\rho(t,\mathbf{s})\,\mathrm{d}^3s = q$ for all $t>t_0$.
 - **Pointwise scaling on the sphere:** the surface density scales as $q/(4\pi r^2)$, giving the stated $1/r^2$ falloff on the expanding sphere.
 
 ---
 
 ### Governing conservation law
 
-This field is the retarded, spherically symmetric, measure-valued solution of the radial continuity (ballistic transport) equation with a point-source impulse:
+This field is the delayed, spherically symmetric, measure-valued solution of the radial continuity equation with a point-source impulse:
 $$
-\partial_t \rho + \nabla\cdot\big(v\,\hat{\mathbf{r}}\,\rho\big) = q\,\delta(t-t_0)\,\delta^{(3)}(\mathbf{x}-\mathbf{x}_0),
-\quad \hat{\mathbf{r}}=\frac{\mathbf{x}-\mathbf{x}_0}{\|\mathbf{x}-\mathbf{x}_0\|}.
+\partial_t \rho + \nabla\cdot\big(v\,\hat{\mathbf{r}}\,\rho\big) = q\,\delta(t-t_0)\,\delta^{(3)}(\mathbf{s}-\mathbf{s}_0),
+\quad \hat{\mathbf{r}}=\frac{\mathbf{s}-\mathbf{s}_0}{\|\mathbf{s}-\mathbf{s}_0\|}.
 $$
 Equivalently, in radial form,
 $$
 \partial_t \rho + v\,\partial_r \rho + \frac{2v}{r}\,\rho = q\,\delta(t-t_0)\,\frac{\delta(r)}{4\pi r^2},
 $$
-whose retarded solution is $\rho(t,\mathbf{x})=\dfrac{q}{4\pi r^2}\delta(r-v\tau)H(\tau)$.
+whose delayed solution is $\rho(t,\mathbf{s})=\dfrac{q}{4\pi r^2}\delta(r-v\tau)H(\tau)$.
 
 ---
 
