--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.0 - Geometry.md
@@ -6,71 +6,71 @@ Here’s how to define it in different levels of formality:
 
 ### **1. Pure Math (metric space version)**  
 We model Euclidean time and space as  
-\[
+$$
 \mathbb{R}^4
-\]  
-with coordinates \((t, x, y, z)\) and metric  
-\[
-d(\mathbf{p}, \mathbf{q}) = \sqrt{(t_p - t_q)^2 + (x_p - x_q)^2 + (y_p - y_q)^2 + (z_p - z_q)^2}.
-\]  
+$$  
+with coordinates $(t, x, y, z)$ and metric  
+$$
+d(\boldsymbol{p}, \boldsymbol{q}) = \sqrt{(t_p - t_q)^2 + (x_p - x_q)^2 + (y_p - y_q)^2 + (z_p - z_q)^2}.
+$$  
 
 A **continuous path** is a continuous map  
-\[
+$$
 \gamma: \mathbb{R} \to \mathbb{R}^4, \quad s \mapsto (t(s), x(s), y(s), z(s))
-\]  
-where \(s\) is a parameter (could be arc length, proper time, or just a dummy variable).  
+$$  
+where $s$ is a parameter (could be arc length, proper time, or just a dummy variable).  
 
 ---
 
 ### **2. Differential Geometry (Riemannian manifold version)**  
 We define the manifold  
-\[
+$$
 (\mathbb{R}^4, g)
-\]  
+$$  
 with  
-\[
+$$
 g = dt^2 + dx^2 + dy^2 + dz^2
-\]  
+$$  
 (a flat, positive-definite metric — *Euclidean signature*).  
 
 A **path** is a smooth curve  
-\[
+$$
 \gamma(s) \in \mathbb{R}^4
-\]  
+$$  
 with tangent vector  
-\[
+$$
 \dot{\gamma}^a(s) = \frac{d x^a}{ds}, \quad a \in \{0,1,2,3\}
-\]  
-where \(x^0 = t\), \(x^1 = x\), etc.  
+$$  
+where $x^0 = t$, $x^1 = x$, etc.  
 
 The **length** of the path is  
-\[
+$$
 L = \int \sqrt{g_{ab} \, \dot{\gamma}^a(s) \, \dot{\gamma}^b(s)} \ ds.
-\]  
+$$  
 
 ---
 
 ### **3. Physics-Flavored (index notation)**  
-Coordinates: \(x^\mu = (t, x, y, z)\), \(\mu \in \{0,1,2,3\}\)  
+Coordinates: $x^\mu = (t, x, y, z)$, $\mu \in \{0,1,2,3\}$  
 Metric:  
-\[
+$$
 g_{\mu\nu} = \delta_{\mu\nu}
-\]  
+$$  
 Line element:  
-\[
+$$
 ds^2 = \delta_{\mu\nu} \, dx^\mu dx^\nu = dt^2 + dx^2 + dy^2 + dz^2
-\]  
+$$  
 Path:  
-\[
+$$
 x^\mu = x^\mu(s), \quad \frac{dx^\mu}{ds} \ \text{continuous}.
-\]  
+$$  
 
 ---
 
 💡 In **relativity**, you’d swap the Euclidean metric for the **Minkowski metric**  
-\[
+$$
 ds^2 = -c^2 dt^2 + dx^2 + dy^2 + dz^2
-\]  
+$$  
 but since you said *Euclidean* time and space, we keep all plus signs.  
 
 ---
