--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.0 - Geometry.md
@@ -1,6 +1,6 @@
-If we extend from a *3D Euclidean void* to a *continuous path through Euclidean time and space*, we’re essentially moving from **pure geometry** into a **worldline** in a 4D Euclidean manifold.  
+This document defines the **4D Euclidean timespace** that serves as the fixed, non-dynamical arena for our model. It is the mathematical combination of absolute 3D space and absolute time, forming a static background upon which physical phenomena and their dynamics (e.g., paths, worldlines) unfold.
 
-Here’s how to define it in different levels of formality:  
+Here’s how to define this timespace in different levels of formality:
 
 ---
 
