--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.1 - Absolute Space.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.1 - Absolute Space.md
@@ -1,4 +1,4 @@
-Absolute 3D Euclidean space is the geometric setting for physical phenomena, independent of time. It is a static, flat, and infinite container.
+Absolute 3D Euclidean space is the geometric setting for physical phenomena, independent of time. It is a **static, flat, and non-dynamical** container where events take place. Its geometry is fixed and does not evolve.
 
 Here’s how to define it formally, mirroring the structures in the 4D Euclidean manifold:
 
