--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.2 - Absolute Time.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.2 - Absolute Time.md
@@ -1,4 +1,4 @@
-Absolute time flows uniformly and independently of space and any events within it. It is a one-dimensional continuum, ordered and linear.
+Absolute time flows uniformly and independently of space and any events within it. It is a one-dimensional continuum, ordered and linear. Its progression is **fixed and non-dynamical**, serving as a universal clock for all phenomena.
 
 ### **Mathematical Description**
 
