--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.1 - Absolute Space.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.1 - Absolute Space.md
@@ -1,5 +1,11 @@
 Absolute 3D Euclidean space is the geometric setting for physical phenomena, independent of time. It is a **static, flat, and non-dynamical** container where events take place. Its geometry is fixed and does not evolve.
 
+A core assumption is that space is **homogeneous and isotropic**:
+-   **Homogeneity**: There is no special or central point. Any location is equivalent to any other.
+-   **Isotropy**: There is no preferred direction in space.
+
+This implies there is no absolute origin; any chosen origin is merely a convenient reference for a coordinate system.
+
 Here’s how to define it formally, mirroring the structures in the 4D Euclidean manifold:
 
 ---
