--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.2 - Absolute Time.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Space and Time/00.0.2 - Absolute Time.md
@@ -16,3 +16,5 @@ Absolute time flows uniformly and independently of space and any events within i
 3.  **Forward Direction (Arrow of Time):** The set of all instants is totally ordered. For any two distinct moments $t_1$ and $t_2$, one must precede the other ($t_1 < t_2$ or $t_2 < t_1$). By convention, time advances in the direction of increasing $t$. The "past" corresponds to smaller values of $t$, and the "future" to larger values.
 
 4.  **Absolute Nature:** The time coordinate $t$ is universal. The duration $\Delta t$ between two events is the same for all observers, regardless of their position or motion.
+
+5.  **No Absolute Origin:** The choice of $t=0$ is arbitrary and serves only as a reference point. The timeline extends infinitely into the past ($t \to -\infty$) and future ($t \to +\infty$), implying no beginning or end.
