--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -40,29 +40,24 @@ whose delayed solution is $\rho(t,\mathbf{s})=\dfrac{q}{4\pi r^2}\delta(r-v\tau)
 
 ---
 
-### Path of an Architrino
+### Path and Dynamics
 
-As a point particle, an Architrino traces a continuous path (or worldline) through spacetime, denoted by its position vector $\mathbf{s}(t)$. The field described above is generated continuously from every point along this path.
+As a point particle, an Architrino traces a continuous path (or worldline) through spacetime, denoted by its position vector $\mathbf{s}_a(t)$. The field described in the preceding sections is generated continuously from every point along this path.
 
-The specific trajectory of this path is determined by the particle's interactions with fields from other particles. These dynamics are defined for specific types of Architrinos, such as the Electrino and Positrino.
-
-
-### **3. Path and Superposition**
-
-#### **Path**
-The **path** of an Architrino is its worldline, the set of points representing its position through time. For any time `t` up to the present moment `$t_{\text{now}}$`, the path is the set:
+#### **Path Definition**
+The **path** of an Architrino is the set of points representing its position through time. For any time `t` up to the present moment `$t_{\text{now}}$`, the path is the set:
 $$
-\mathcal{P}_e = \{ \mathbf{s}_e(t) \mid t \le t_{\text{now}} \}
+\mathcal{P}_a = \{ \mathbf{s}_a(t) \mid t \le t_{\text{now}} \}
 $$
-where `$\mathbf{s}_e(t)$` is the position vector of the Architrino.
 
 #### **Future Path and Superposition**
-The future path (for $t > t_{\text{now}}$) is determined by integrating the equation of motion, using the Architrino's current position `$\mathbf{s}_e(t_{\text{now}})$` and velocity `$\mathbf{v}_e(t_{\text{now}})$` as initial conditions.
+The future path (for $t > t_{\text{now}}$) is determined by integrating the equation of motion, using the Architrino's current position `$\mathbf{s}_a(t_{\text{now}})$` and velocity `$\mathbf{v}_a(t_{\text{now}})$` as initial conditions.
 
-The total acceleration on the Architrino at any instant is the vector sum of the individual accelerations caused by each intersecting potential sphere from all other source particles. This is the **principle of superposition**:
+The total acceleration on an Architrino at any instant is the vector sum of the individual accelerations caused by each intersecting potential sphere from all other source particles. This is the **principle of superposition**:
 $$
-\mathbf{a}_{e, \text{total}}(t) = \sum_{j} \mathbf{a}_{e,j}(t)
+\mathbf{a}_{a, \text{total}}(t) = \sum_{j} \mathbf{a}_{a,j}(t)
 $$
-where `$\mathbf{a}_{e,j}(t)$` is the acceleration induced on the Architrino by the field of source particle `j`. An individual acceleration term is non-zero only if the interaction condition with particle `j` is met at time `t`.
----
+where `$\mathbf{a}_{a,j}(t)$` is the acceleration induced on the Architrino by the field of source particle `j`. An individual acceleration term is non-zero only if the interaction condition with particle `j` is met at time `t`.
+
+The specific interaction rules that determine the acceleration are defined for subtypes of Architrinos, such as the Electrino and Positrino.
 
