--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Electrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Electrino.md
@@ -27,3 +27,11 @@ An Electrino, located at position `$\mathbf{s}_e(t)$`, is a point particle that 
         $$
 
 This behavior is consistent with a force law where like charges repel and opposite charges attract.
+
+### **3. Path**
+
+The Electrino follows the general path dynamics described for the Architrino. Its path is the set of historical positions:
+$$
+\mathcal{P}_e = \{ \mathbf{s}_e(t) \mid t \le t_{\text{now}} \}
+$$
+Its future trajectory is determined by its current state $(\mathbf{s}_e, \mathbf{v}_e)$ and the superposition of accelerations from all intersecting fields, as detailed in its interaction dynamics.
