--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.2 - Positrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.2 - Positrino.md
@@ -27,3 +27,11 @@ A Positrino, located at position `$\mathbf{s}_p(t)$`, is a point particle that m
         $$
 
 This behavior is consistent with a force law where like charges repel and opposite charges attract.
+
+### **3. Path**
+
+The Positrino follows the general path dynamics described for the Architrino. Its path is the set of historical positions:
+$$
+\mathcal{P}_p = \{ \mathbf{s}_p(t) \mid t \le t_{\text{now}} \}
+$$
+Its future trajectory is determined by its current state $(\mathbf{s}_p, \mathbf{v}_p)$ and the superposition of accelerations from all intersecting fields, as detailed in its interaction dynamics.
