--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -61,3 +61,32 @@ where `$\mathbf{a}_{a,j}(t)$` is the acceleration induced on the Architrino by t
 
 The specific interaction rules that determine the acceleration are defined for subtypes of Architrinos, such as the Electrino and Positrino.
 
+---
+
+### Advanced Dynamics: Velocity Regimes and Emission
+
+This section details more advanced concepts regarding the Architrino's motion and its field generation.
+
+#### **Velocity Regimes and Local Field Interaction**
+The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a|$. Its velocity relative to the field speed `v` defines three distinct dynamic regimes. Consider a particle at position $\mathbf{s}_a(t_{\text{now}})$ moving with velocity $\mathbf{v}_a$. At an infinitesimal time $\Delta t$ later, its new position is $\mathbf{s}_a(t_{\text{now}} + \Delta t)$. The wavefront it emitted at $t_{\text{now}}$ has expanded to a radius of $r = v \Delta t$.
+
+-   **Sub-field Speed ($|\mathbf{v}_a| < v$):** The particle travels a distance less than the wavefront's radius. It is located *inside* the sphere of its most recent emission, lagging behind it.
+-   **Super-field Speed ($|\mathbf{v}_a| > v$):** The particle travels a distance greater than the wavefront's radius. It is located *outside* the sphere of its most recent emission, moving ahead of it.
+-   **Symmetry Point ($|\mathbf{v}_a| = v$):** The particle travels exactly on the edge of its own expanding wavefront. This represents a critical symmetry-breaking point in its dynamics.
+
+It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own wavefronts emitted much earlier in its path history (long-range self-interaction), which can occur if its path curves.
+
+#### **Velocity-Modulated Emission**
+While the Architrino emits its field at a constant rate, the strength of the impulse generated at any instant is modulated by its speed. The effective charge magnitude, $q_{eff}$, of the impulse emitted at time $t_0$ is inversely proportional to the particle's speed $|\mathbf{v}_a(t_0)|$.
+$$
+q_{eff}(t_0) = \frac{q}{|\mathbf{v}_a(t_0)|}
+$$
+This modifies the governing equations. The source term in the conservation law becomes:
+$$
+\text{source} = \frac{q}{|\mathbf{v}_a(t_0)|}\,\delta(t-t_0)\,\delta^{(3)}(\mathbf{s}-\mathbf{s}_0)
+$$
+Consequently, the density on the expanding sphere is also scaled by this factor:
+$$
+\rho(t,\mathbf{s}) = \frac{q_{eff}(t_0)}{4\pi r^2}\,\delta\!\big(r - v\,\tau\big)\,H(\tau) = \frac{q}{|\mathbf{v}_a(t_0)| \cdot 4\pi r^2}\,\delta\!\big(r - v\,\tau\big)\,H(\tau)
+$$
+
