--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -77,16 +77,18 @@ The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a
 It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own wavefronts emitted earlier in its path history. This is somewhat analogous to a speedboat passing it's own wake, and later curving or stopping such that it's past wake catches up and passes.
 
 #### **Velocity-Modulated Emission**
-While the Architrino emits its field at a constant rate, the strength of the impulse generated at any instant is modulated by its speed. The effective charge magnitude, $q_{eff}$, of the impulse emitted at time $t_0$ is inversely proportional to the particle's speed $|\mathbf{v}_a(t_0)|$.
+While the Architrino emits its field at a constant rate, the strength of the impulse generated at any instant is modulated by its speed. The emission strength is inversely related to the particle's speed, being maximal for a stationary particle and decreasing as speed increases.
+
+To model this without singularities, we define the effective charge magnitude, $q_{eff}$, using a dimensionless factor based on the ratio of the particle's speed to the field speed, $\beta(t_0) = |\mathbf{v}_a(t_0)|/v$. A simple, non-singular model is:
 $$
-q_{eff}(t_0) = \frac{q}{|\mathbf{v}_a(t_0)|}
+q_{eff}(t_0) = \frac{q}{1 + \beta(t_0)} = \frac{q}{1 + |\mathbf{v}_a(t_0)|/v}
 $$
 This modifies the governing equations. The source term in the conservation law becomes:
 $$
-\text{source} = \frac{q}{|\mathbf{v}_a(t_0)|}\,\delta(t-t_0)\,\delta^{(3)}(\mathbf{s}-\mathbf{s}_0)
+\text{source} = q_{eff}(t_0)\,\delta(t-t_0)\,\delta^{(3)}(\mathbf{s}-\mathbf{s}_0)
 $$
 Consequently, the density on the expanding sphere is also scaled by this factor:
 $$
-\rho(t,\mathbf{s}) = \frac{q_{eff}(t_0)}{4\pi r^2}\,\delta\!\big(r - v\,\tau\big)\,H(\tau) = \frac{q}{|\mathbf{v}_a(t_0)| \cdot 4\pi r^2}\,\delta\!\big(r - v\,\tau\big)\,H(\tau)
+\rho(t,\mathbf{s}) = \frac{q_{eff}(t_0)}{4\pi r^2}\,\delta\!\big(r - v\,\tau\big)\,H(\tau)
 $$
 
